--- a/notes.tex
+++ b/notes.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt]{elegantbook}
 \newcommand{\dif}{\mathrm{d}}
 \newcommand{\innerprod}[2]{\left<#1,#2\right>}
+\newcommand{\norm}[1]{\left\|#1\right\|}
 \title{A brief note for Evans PDE chapter 5-7}
 
 \author{Shuang Hu}
