--- a/notes.tex
+++ b/notes.tex
@@ -2,6 +2,7 @@
 \newcommand{\dif}{\mathrm{d}}
 \newcommand{\innerprod}[2]{\left<#1,#2\right>}
 \newcommand{\norm}[1]{\left\|#1\right\|}
+\newcommand{\Linf}{L^{\infty}}
 \title{A brief note for Evans PDE chapter 5-7}
 
 \author{Shuang Hu}
