--- a/reference.bib
+++ b/reference.bib
@@ -7,8 +7,8 @@
   number={3},
   pages={256--274},
   year={2018},
-  publisher={Emerald Publishing Limited}
-}
+  publisher={Emerald Publishing Limited},
+},
 
 
 @article{en2,
@@ -18,8 +18,8 @@
    pages = {893-910},
    ISSN = {0002-8282},
    year = {1997},
-   type = {Journal Article}
-}
+   type = {Journal Article},
+},
 
 @article{en1,
    author = {Quadrini, Vincenzo},
@@ -29,8 +29,8 @@
    number = {3},
    pages = {209-254},
    year = {2011},
-   type = {Journal Article}
-}
+   type = {Journal Article},
+},
 
 @article{cn1,
    author = {方军雄},
@@ -41,8 +41,8 @@
    pages = {82-92},
    ISSN = {0577-9154},
    year = {2007},
-   type = {Journal Article}
-}
+   type = {Journal Article},
+},
 
 @article{cn2,
    author = {刘凤良 and 章潇萌 and 于泽},
@@ -53,8 +53,8 @@
    pages = {54-69},
    ISSN = {1002-7246},
    year = {2017},
-   type = {Journal Article}
-}
+   type = {Journal Article},
+},
 
 @article{cn3,
    author = {吕捷 and 王高望},
@@ -66,6 +66,15 @@
    pages = {136-149},
    ISSN = {0577-9154},
    year = {2015},
-   type = {Journal Article}
-}
+   type = {Journal Article},
+},
+
+@book{evans2022partial,
+  title={Partial differential equations},
+  author={Evans, Lawrence C},
+  volume={19},
+  year={2022},
+  publisher={American Mathematical Society},
+},
+
 
